Closed Bug 354670 Opened 19 years ago Closed 19 years ago

RSS feed with corrupted links (new bug since Firefox 1.5)

Categories

(Firefox Graveyard :: RSS Discovery and Preview, defect)

2.0 Branch
x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Firefox 2

People

(Reporter: voschix, Assigned: sayrer)

References

()

Details

(Keywords: regression, verified1.8.1)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.8.1) Gecko/20060918 Firefox/2.0 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.8.1) Gecko/20060918 Firefox/2.0 I am routinely using three RSS feeds via Live Bookmarks. When I upgraded from Firefox 1.5 to 2.0 one of them has all entries corrupted in the form of double entries: each link in the feed is exacactly the concatenation of the correct link with itself. This happens with all entries in the the RSS feed of the Italian newspaper La Repubblica http://www.repubblica.it/rss/homepage/rss2.0.xml, but not with two other feeds I am using: http://www.spiegel.de/schlagzeilen/rss/0,5291,,00.xml and http://news.bbc.co.uk/rss/newsonline_uk_edition/front_page/rss091.xml. Reverting to the version 1.5 cures the problem. Reproducible: Always Steps to Reproduce: 1. go to http://www.repubblica.it/rss/homepage/rss2.0.xml 2. add as live bookmark to bookmarks toolbar folder 3. click on the RSS feed and open any link Actual Results: The link will produce an error message from the Repubblica pages. When you analyse the link that the browser actually tried to open, you will see that it is actually the concatenation of a valid link with itself. Deleting the second half from the link gives the valid link. I have not done any checks with other RSS feeds.
Version: unspecified → 2.0 Branch
Works in Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8.0.7) Gecko/20060909 Firefox/1.5.0.7 Doesn't work in Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8.1) Gecko/20060927 BonEcho/2.0 ID:2006092710 1. New profile 2. Bookmarks > Organise Bookmarks, File > New Live Bookmark 3. Use http://www.repubblica.it/rss/homepage/rss2.0.xml as feed URL 4. Click on a link in the feed. in 1.5 the link loads fine, in 2.0 (20060927) the link doesn't work because the URL is made from two valid URLs concatenated. (eg: http://www.somelink.com/storyhttp://www.somelink.com/story)
Status: UNCONFIRMED → NEW
Component: Bookmarks → RSS Discovery and Preview
Ever confirmed: true
Keywords: regression
QA Contact: bookmarks → rss.preview
Flags: blocking-firefox2?
Assignee: nobody → sayrer
Flags: blocking-firefox2? → blocking-firefox2+
This regressed when title/link parsing was changed to catch carriage returns and multiple cdata sections in May 06.
Attachment #240496 - Flags: review?(mconnor)
Target Milestone: --- → Firefox 2
Attachment #240496 - Attachment is obsolete: true
Attachment #240500 - Flags: review?(mconnor)
Attachment #240496 - Flags: review?(mconnor)
Isn't that going to choose <link> over <guid> if the <link> comes first? I'd think we would want to clear linkStr once we've decided it's a isPermaLink, rather than give up on <guid> if we already found a <link>.
(In reply to comment #4) > Isn't that going to choose <link> over <guid> if the <link> comes first? I'd > think we would want to clear linkStr once we've decided it's a isPermaLink, > rather than give up on <guid> if we already found a <link>. Yes, but that should be the 1.5 behavior as well, right? Looking for the minimal fix at this point.
You're right, and Bugzilla's of the opinion that I completely imagined the bug where I thought that was fixed as a side effect of something Atom-related. Nevermind.
Comment on attachment 240500 [details] [diff] [review] check to see if linkStr and dateStr are empty r=me, though I'm not sure why we'd check for the empty string first in one case, and last in another, but I don't know all of this code well enough to know the merits of the ordering
Attachment #240500 - Flags: review?(mconnor) → review+
Comment on attachment 240500 [details] [diff] [review] check to see if linkStr and dateStr are empty a=beltzner on behalf of drivers, you are cleared to land for RC2
Attachment #240500 - Flags: approval1.8.1+
Whiteboard: [checkin needed (1.8 branch)]
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
verified fixed on the 1.8.1 branch using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1) Gecko/20061002 Firefox/2.0. Clicking on a link from http://www.repubblica.it/rss/homepage/rss2.0.xml does not produce any error pages. adding keyword.
checked in to trunk Checking in nsBookmarksFeedHandler.cpp; /cvsroot/mozilla/browser/components/bookmarks/src/nsBookmarksFeedHandler.cpp,v <-- nsBookmarksFeedHandler.cpp new revision: 1.17; previous revision: 1.16 done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Firefox → Firefox Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: