Bug 354670. RSS feed with corrupted links (new bug since Firefox 1.5). r=mconnor